- Fixed bug #52971 (PCRE-Meta-Characters not working with utf-8) #   In  PCRE,  by  default, \d, \D, \s, \S, \w, and \W recognize only ASCII #       characters, even in UTF-8 mode. However, this can be changed by setting #       the PCRE_UCP option.